# embedded-general-support-library

./: .gitlab-ci.yml  AnalogPin.h  BufferedOut.cpp  BufferedOut.h  CMakeLists.txt  Debug.h  Delays.h  EndianConversion.h  GpioDigitalPin.h  I2CDevice.h  MemoryView.h  PacketUart.h  PersistentStorage.cpp  PersistentStorage.h  README.md  SerialOut.h  SpiDevice.h  library.json  library.properties
.github/workflows/: cmake.yml
arduino/: Delays.cpp  GpioPinDefinition.h  I2CBus.h  I2CDevice.cpp  PacketUartImpl.h  SerialDebug.cpp  SpiBus.cpp  SpiDevice.cpp
esp32/: PacketUart.cpp  PacketUartImpl.h  SerialOut.cpp
esp32-arduino/: AnalogPin.cpp  Delays.cpp  GpioDigitalPin.cpp  GpioPinDefinition.h  I2CBus.cpp  PacketUart.cpp  SerialDebug.cpp  SpiBus.h  SpiDevice.cpp
esp32-esp-idf/: AnalogPin.cpp  Delays.cpp  GpioDigitalPin.cpp  I2CBus.cpp  I2CBus.h  I2CDevice.cpp  PacketUart.cpp  PacketUartImpl.h  SerialDebug.cpp  SimpleUartDevice.cpp  SimpleUartDevice.h  SleepFunctions.h  SpiBus.cpp  SpiBus.h
gfx-font-converter/: BitStream.h  CMakeLists.txt  EncodingConverter.cpp  EncodingConverter.h  FontConverterConfig.cpp  FontConverterConfig.h  FreeTypeFace.cpp  FreeTypeFace.h  FreeTypeGlyph.cpp  FreeTypeGlyph.h  FreeTypeLibrary.cpp  FreeTypeLibrary.h  main.cpp
graphics/: BaseGeometry.h  Canvas.cpp  Canvas.h  EmbeddedFont.cpp  EmbeddedFont.h  EmbeddedFonts.cpp  EmbeddedFonts.h  FrameBufferBase.h  GFXFontsAdapter.h  Readme.md  SimpleFrameBuffer.h
graphics/GFXFonts/: FreeSans15pt7b.h
test/: PersistentStorageTest.cpp
tests/: BaseGeometryTest.cpp  BufferedOutTest.cpp  CMakeLists.txt  EndianConversionTest.cpp  MemoryViewTest.cpp  MonochromeFrameBufferTest.cpp  PBMHelper.cpp  PBMHelper.h  PersistentStorageTest.cpp
tests/data/: MonochromeFrameBufferTest0.pbm  MonochromeFrameBufferTest180.pbm  MonochromeFrameBufferTest270.pbm  MonochromeFrameBufferTest90.pbm  MonochromeFrameBufferTestLine1.pbm  MonochromeFrameBufferTestLine2.pbm  MonochromeFrameBufferTestLine3.pbm
